# mmp-web-server

./: .gitignore  Dockerfile  README.md  experiments.ipynb  pyproject.toml
scripts/: build.sh  run.sh
src/: ensembles.py  ml_server.py
src/html/: choose_parameters.html  from_form.html  inference.html  train_model.html  validation.html
