[tool.poetry]
name = "mmp-web-server"
version = "0.1.0"
description = ""
authors = ["Vladislav Lapikov <99816762+wh0t-is-love@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mmp_web_server"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
flask = "^3.0.0"
flask-wtf = "^1.2.1"
flask-bootstrap = "^3.3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
